Fixes #7 : MDX editor doesn't have a vertical scrollbar

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -243,6 +243,10 @@ form {
 	vertical-align: middle;
 }
 
+#mdx-editor-pane {
+	padding-bottom: 6px;
+}
+
 #mdx-editor-pane .pe-layout-pane-content {
 	padding: 0;
 }
@@ -254,6 +258,10 @@ form {
 
 #mdx-editor-pane .query-info {
 	padding: 8px 5px 0px 5px;	
+}
+
+#mdx-editor-pane .ui-toolbar {
+	border: none;
 }
 
 .ui-icon-title {
